Fix humphd/brackets#219 - Allow overflow scrolling when in mobile preview mode

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -89,3 +89,7 @@
     background: #FFF none repeat scroll 0% 0%;
     height: 100%;
 }
+
+.second-pane-scroll {
+    overflow: scroll !important;
+}
